# simpoly

./: .gitignore  NOTICE.txt  README.md  environment.yml  pyproject.toml
.devcontainer/cpu/: devcontainer.json
.devcontainer/gpu/: devcontainer.json
.github/workflows/: style.yml  tests.yml
checkpoints/: vivace_v0.1.mliap.pt  vivace_v0.1.pt
docker/: Dockerfile  README.md
examples/tg_cooling_polystyrene/: README.md  final_npt.restart  in.tg_cooling
notebooks/: poly_arena_experiment.ipynb  poly_data.ipynb
notebooks/examples/PODPM/: PODPM_n10000_T272_s42.txt  PODPM_n10000_T272_s420.txt  PODPM_n10000_T272_s4200.txt  PODPM_n10000_T312_s420.txt  PODPM_n10000_T312_s4200.txt  PODPM_n10000_T352_s42.txt  PODPM_n10000_T352_s420.txt  PODPM_n10000_T352_s4200.txt  PODPM_n10000_T392_s42.txt  PODPM_n10000_T392_s420.txt  PODPM_n10000_T392_s4200.txt  PODPM_n10000_T432_s42.txt  PODPM_n10000_T432_s420.txt  PODPM_n10000_T432_s4200.txt  PODPM_n10000_T472_s420.txt  PODPM_n10000_T472_s4200.txt  PODPM_n10000_T512_s42.txt  PODPM_n10000_T512_s420.txt  PODPM_n10000_T512_s4200.txt  PODPM_n10000_T532_s42.txt  PODPM_n10000_T532_s420.txt  PODPM_n10000_T532_s4200.txt  PODPM_n10000_T552_s42.txt  PODPM_n10000_T552_s420.txt  PODPM_n10000_T552_s4200.txt  PODPM_n10000_T572_s42.txt  PODPM_n10000_T572_s420.txt  PODPM_n10000_T572_s4200.txt  PODPM_n10000_T592_s42.txt  PODPM_n10000_T592_s420.txt  PODPM_n10000_T592_s4200.txt  PODPM_n10000_T612_s42.txt  PODPM_n10000_T612_s420.txt  PODPM_n10000_T612_s4200.txt  PODPM_n10000_T632_s42.txt  PODPM_n10000_T632_s420.txt  PODPM_n10000_T632_s4200.txt  PODPM_n10000_T652_s42.txt  PODPM_n10000_T652_s420.txt  PODPM_n10000_T652_s4200.txt  (+26 more)
notebooks/examples/PS/: PS_n10000_T213_s42.txt  PS_n10000_T213_s420.txt  PS_n10000_T213_s4200.txt  PS_n10000_T233_s42.txt  PS_n10000_T233_s420.txt  PS_n10000_T233_s4200.txt  PS_n10000_T253_s42.txt  PS_n10000_T253_s420.txt  PS_n10000_T273_s42.txt  PS_n10000_T273_s420.txt  PS_n10000_T273_s4200.txt  PS_n10000_T293_s42.txt  PS_n10000_T293_s420.txt  PS_n10000_T293_s4200.txt  PS_n10000_T313_s42.txt  PS_n10000_T313_s4200.txt  PS_n10000_T333_s42.txt  PS_n10000_T333_s420.txt  PS_n10000_T333_s4200.txt  PS_n10000_T353_s42.txt  PS_n10000_T353_s420.txt  PS_n10000_T353_s4200.txt  PS_n10000_T373_s42.txt  PS_n10000_T373_s420.txt  PS_n10000_T373_s4200.txt  PS_n10000_T393_s42.txt  PS_n10000_T393_s420.txt  (+20 more)
tests/test_poly_arena/: test_aggregate.py  test_cooling_fit.py  test_data.py  test_generation.py  test_tools.py
tests/vivace/: conftest.py  test_ase_interface.py  test_edge_mask.py  test_empty_equiv_mask.py  test_equivariance.py  test_lammps_mliap.py  test_neighborhood.py  test_vivace.py
(+76 files in other folders)
